--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "gck": "bin/gck.sh"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yihuaxiang/gck.git"
